manifests/overlays/prod/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: aatest
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: aatest
          command: ["java","-jar","/app.jar"]
          args: ["--spring.config.location=file:/config/application.yml"]
          volumeMounts:
          - mountPath: /mnt/aatest
            name: aatest-volume
            readOnly: false
            subPath: aatest
          - mountPath: /config
            name: application-properties
            readOnly: true
                          
      volumes:
      - name: aatest-volume
        persistentVolumeClaim:
          claimName: ce-aa-pvc
      - name: application-properties
        configMap:
          name: aatest-configmap
          items:
            - key: application.yml
              path: application.yml
          defaultMode: 420
