manifests/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aatest-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: 82023238.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: aatest
            port:
              number: 8080
        pathType: Prefix
